--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -19,7 +19,7 @@ jan2021:
     ug-prereq-courses: UM 102
     timing:
     venue:
-  - code: MA 291
+  - code: UM 502
     instructor: UG Coordinator
     name: "Masters project B"
     credits: '6:0'
@@ -115,7 +115,7 @@ aug2020:
   - code: UM 201
     instructor: Sanchayan Sen
     name: Probability and Statistics
-  - code: MA 290
+  - code: UM 501
     instructor: UG Coordinator
     name: "Masters project A"
     credits: '6:0'
