--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -440,3 +440,11 @@
   programme: Integrated PhD
   user-id: mansimars
   image: true
+
+- name: Bappa Ghosh
+  year-of-joining: 2020
+  programme: PhD
+  user-id: bappaghosh
+  image: true
+
+ 
