Added Inspire Fellow and Removed Postdocs

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -18,3 +18,10 @@
   research-areas: Algebraic number theory
   user-id : psushma
   image: true
+
+- name: Srijan Sarkar, (Ph.D., ISI, Bangalore)
+  position: Inspire Fellow
+  research-areas: Multivariate Operator Theory
+  user-id : srijans
+  image: true
+
