--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -231,7 +231,7 @@
   phd: Courant Institute
   office: X01
   phone-ext: 3616
-  website: https://sites.google.com/site/sanchayansenss/
+  website: https://sanchayansen.wixsite.com/root
   author-name: Sen, Sanchayan
 
 - name: Harish Seshadri
