--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -109,8 +109,8 @@
   position: Assistant Professor
   research-areas: Several complex variables
   phd: Michigan
-  phone-ext: 3214
-  office: R23
+  phone-ext:
+  office: L25
   author-name: Gupta, Purvi
  
 - name: Subhojoy Gupta
@@ -249,7 +249,7 @@
   research-areas: Representation theory
   phd: IMSc
   phone-ext: 2571
-  office: L25
+  office:
   website: https://sites.google.com/site/poojasingla7/Home
   author-name: Singla, Pooja
 
