--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -243,6 +243,15 @@
   office: R27
   author-name: Seshadri, Harish
 
+- name: Swarnendu Sil
+  user-id: swarnendusil
+  position: Assistant Professor
+  research-areas: Calculus of Variations, PDEs, Geometric analysis
+  phd: EPFL, Switzerland
+  phone-ext: 
+  office: 
+  author-name: Sil, Swarnendu
+
 - name: Pooja Singla
   user-id: pooja
   position: Associate professor
