--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -73,6 +73,7 @@
   phd: Brandeis
   phone-ext:
   office: R23
+  website: https://sites.google.com/view/shaunakdeo/
   author-name: Deo, Shaunak
 
 - name: Siddhartha Gadgil
