--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -260,6 +260,7 @@
   phd: EPFL, Switzerland
   phone-ext: 
   office: 
+  website: http://www.math.iisc.ac.in/~ssil/
   author-name: Sil, Swarnendu
 
 - name: Pooja Singla
