--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -133,3 +133,38 @@
   position: NBHM
   research-area: Number theory
 
+- name: Chandan Biswas
+  phd: University of Wisconsin, Madison
+  user-id: chandanbiswa
+  position: Raman PDF
+  research-area: Harmonic Analysis
+
+- name: Mihir Sheth
+  phd: University of Duisburg-Essen, Germany
+  user-id: mihirsheth
+  position: Raman PDF
+  research-area: Number theory, Representation theory
+
+- name: Anoop V. P.
+  phd: NISER Bhubaneswar
+  user-id: anoopvp
+  position: NPDF
+  research-area: Harmonic Analysis 
+
+- name: Rajesh Kumar Singh 
+  phd: 
+  user-id: rajeshsingh
+  position: NBHM
+  research-area:
+
+- name: Tathagata Banerjee
+  phd: 
+  user-id: tathagatab
+  position: UGC Kothari
+  research-area: 
+
+- name: Vijaya Kumar U
+  phd:
+  user-id: vijayak
+  position: 
+  research-area:  
