--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -148,3 +148,103 @@
 - name: Utkarsh Rajput
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
+- name : Biswajit Nag
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Prateek Yadav
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Adhithya P
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Ashwin Maran
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Junaid Hasan
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Prakhar Gupta
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Rachitesh Kumar
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Ratul Biswas
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Sabyasachi Basu
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Saket Padhi
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Sidharth P. Jacob
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Warade Pranjal Pandurang
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Samayak
+  degree : Bachelor of Science (Research)
+  year : '2019'
+- name : Prokash Kumar Kundu
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2019'
+- name : Sapre Dushyant Prashant
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2019'
+- name : Tapesh Yadav
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2019'
+- name : Anand U R
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Rohan Das
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Bharath Krishnan
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Chandrakant Harjpal                              
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Vishnu Teja Bondalakunta                       
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Anil Kumar
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Aniruddh Balasubramaniam
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Gaba Pranshu Kishor Raashi
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Julian Reuben Dcosta
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Manan Bhatia
+  degree : Bachelor of Science (Research)
+  year : '2020'
+- name : Agneedh Basu
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : Arka Ghosh
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : K Philip Thomas
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : Navdeep Kumar
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : Rohit Murali
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : Soumik Dutta
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+- name : Abhratanu Saha
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2020'
+
