Updated Postdocs alumni and Project Staff

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -2,3 +2,14 @@
 - name: David Farris
 - name: Jaban Meher
   position: Assistant Professor, NISER Bhubaneshwar
+- name: Asha Kisan Dond
+- name: Dipendu Maity
+- name: Bikramaditya Sahu
+- name: Tamal Pramanick
+- name: Abhitosh Upadhyay
+- name: Vishnu Priya Nataraj
+- name: Anirudha Poria
+
+
+
+
