Updated Postdocs and Alumni

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -9,6 +9,12 @@
 - name: Abhitosh Upadhyay
 - name: Vishnu Priya Nataraj
 - name: Anirudha Poria
+- name: Abhash Kumar Jha
+- name: Tathagata Banerjee
+- name: Kaustubh Manchanda
+
+
+
 
 
 
