--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,4 +1,5 @@
 - name: Arun Maiti
+- name: Gopal Datt
 - name: David Farris
 - name: Jaban Meher
   position: Assistant Professor, NISER Bhubaneshwar
