Added first UG batch BSc details

--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -1,3 +1,27 @@
+- name : S. Athmanathan 
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Terrence George George
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Gollapalli Thyagarajulu
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Katta Venkata Ramana
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Eva Cherian
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Tejas Fuley
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Joseph Kannathoor
+  degree : Bachelor of Science (Research)
+  year : '2015'
+- name : Sudhanva Shyam Kamath
+  degree : Bachelor of Science (Research)
+  year : '2015'
 - name: Anamay Chaturvedi
   year: '2016'
   degree: Bachelor of Science (Research)
