--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -45,7 +45,7 @@
 - name: Sumana Hatui 
   phd: HRI, Allahabad
   user-id: sumanahatui
-  position: NBHM
+  position: Raman PDF
   image: true
   research-area: Group Theory, Schur multiplier 
 
