--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -103,7 +103,7 @@ jan2021:
     ug-prereq-courses: ''
     timing: 'Tue, Thu 3:30 - 5:00'
     venue: 
-    webpage: 
+    webpage: https://sites.google.com/view/subhojoy/ma338-feb-may-2021
   - name: Stochastic Dynamic Optimization
     code: MA 359
     instructor: Rahul Singh
