course web page

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -54,6 +54,7 @@ jan2021:
     ug-prereq-courses: ''
     timing: 'Mon, Wed, Fri 2:00 - 3:00'
     venue: 
+    webpage: http://math.iisc.ac.in/~purvigupta/math224.html
   - name: Calculus on Manifolds
     instructor: Ved Datar
     code: MA 229
