--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -4,6 +4,7 @@ jan2021:
     instructor: Vamsi Pingali
     name: "Analysis and Linear Algebra - II"
     ug-prereq-courses: UM 101
+    webpage: http://math.iisc.ac.in/~vamsipingali/teaching/um102anallinealg2021spring/um1022021.html
   - code: UM 203
     name: Introduction to Algebraic Structures
     credits: '3:1'
