--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -107,8 +107,9 @@
   user-id: mihirsheth
   position: Raman PDF
   image: true
+  website: https://sites.google.com/view/mihirsheth/hom
   research-area: Number theory, Representation theory
-  website: https://sites.google.com/view/mihirsheth/home
+  
 
 - name: Anoop V. P.
   phd: NISER Bhubaneswar
