Updated PhD Student List 2020

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -103,11 +103,11 @@
   research-area: Harmonic Analysis
 
 - name: Mihir Sheth
+  webpage: https://sites.google.com/view/mihirsheth/home
   phd: University of Duisburg-Essen, Germany
   user-id: mihirsheth
   position: Raman PDF
   image: true
-  website: https://sites.google.com/view/mihirsheth/hom
   research-area: Number theory, Representation theory
   
 
