--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -5,6 +5,7 @@ jan2021:
     name: "Analysis and Linear Algebra - II"
     ug-prereq-courses: UM 101
     webpage: http://math.iisc.ac.in/~vamsipingali/teaching/um102anallinealg2021spring/um1022021.html
+    timing: 'Mon, Wed, Fri 9:30 - 10:30'
   - code: UM 204
     name: Introduction to Basic Analysis
     credits: '3:1'
