--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -3,15 +3,18 @@
   year : '2015'
 - name : Terrence George George
   degree : Bachelor of Science (Research)
+  present: "Graduate student at Brown University"
   year : '2015'
 - name : Gollapalli Thyagarajulu
   degree : Bachelor of Science (Research)
+  present: "Graduate student at Monash University"
   year : '2015'
 - name : Katta Venkata Ramana
   degree : Bachelor of Science (Research)
   year : '2015'
 - name : Eva Cherian
   degree : Bachelor of Science (Research)
+  present: "Cochin University"
   year : '2015'
 - name : Tejas Fuley
   degree : Bachelor of Science (Research)
