--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -31,18 +31,19 @@
 - name: Milind Hegde
   year: '2016'
   degree: Bachelor of Science (Research)
-  present: "Graduate student at U.C. Berkeley"
+  present: "Graduate student at University of California at Berkeley"
 - name: S Hamilton Samraj
   year: '2016'
   degree: Bachelor of Science (Research)
-  present: "Graduate student at U.C. Davis"
+  present: "Graduate student at University of California at Davis"
 - name: Sabareesh R
   year: '2016'
   degree: Bachelor of Science (Research)
-  present: Masters programme at the London School of Economics
+  present: "Masters programme at the London School of Economics"
 - name: Saibal De
   year: '2016'
   degree: Bachelor of Science (Research)
+  present: "Graduate student at University of Michigan"
 - name: Sandip Sinha
   year: '2016'
   degree: Bachelor of Science (Research)
@@ -74,7 +75,8 @@
 - name: Chinmay Lohani
   year: '2017'
   degree: Bachelor of Science (Research)
-- name: Ishan  Banerjee
+  present: "Graduate student at University of Pennsylvania"
+- name: Ishan Banerjee
   year: '2017'
   degree: Bachelor of Science (Research)
   present: "Graduate student at University of Chicago"
@@ -88,7 +90,7 @@
 - name: Shubham Sinha
   year: '2017'
   degree: Bachelor of Science (Research)
-  present: "Graduate student at U.C. San Diego"
+  present: "Graduate student at University of California at San Diego"
 - name: Aditi Rai
   year: '2018'
   degree: Bachelor of Science (Research)
