--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -100,6 +100,7 @@
 - name: Ishan Agarwal
   year: '2018'
   degree: Bachelor of Science (Research)
+  present: "Graduate student at New York University"
 - name: Pranav Nuti
   year: '2018'
   degree: Bachelor of Science (Research)
@@ -131,9 +132,10 @@
   year: '2016'
   degree: Bachelor of Science (Research) & Master of Science
   present: "Graduate student at Berlin School of Mathematics"
-- name: Km Jigyasa Gaurav
+- name: Jigyasa Gaurav
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at IIT Bombay"
 - name: Abhishek Balakrishna
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
