--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -83,7 +83,7 @@
 - name: Raghav Malhotra
   year: '2017'
   degree: Bachelor of Science (Research)
-- name: Sanal S Prasad
+- name: Sanal Shivaprasad
   year: '2017'
   degree: Bachelor of Science (Research)
   present: "Graduate student at University of Michigan"
@@ -135,7 +135,7 @@
 - name: Jigyasa Gaurav
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
-  present: "Graduate student at IIT Bombay"
+  present: "Graduate student at Indian Institute of Technology Bombay"
 - name: Abhishek Balakrishna
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
@@ -152,7 +152,7 @@
 - name: Soumyo Biswas
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
-  present: "Graduate student at Delaware"
+  present: "Graduate student at University of Delaware"
 - name: Rohit Chatterjee
   year: '2017'
   degree: Bachelor of Science (Research) & Master of Science
@@ -160,16 +160,18 @@
 - name: Naren Vohra
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at Oregon State University"
 - name: Agniva Das Gupta
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
 - name: Kartik Waghmare
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at École polytechnique fédérale de Lausanne"
 - name: Sarvesh Ravichandran Iyer
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
-  present: "Graduate student at Indian Statistical Institute"
+  present: "Graduate student at Indian Statistical Institute Bangalore"
 - name: Saswata Chatterjee
   year: '2018'
   degree: Bachelor of Science (Research) & Master of Science
