--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -213,6 +213,7 @@
   year : '2019'
 - name : Sabyasachi Basu
   degree : Bachelor of Science (Research)
+  present: "Graduate student at University of California at Santa Cruz"
   year : '2019'
 - name : Saket Padhi
   degree : Bachelor of Science (Research)
@@ -229,12 +230,14 @@
   year : '2019'
 - name : Prokash Kumar Kundu
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at ICTS Bangalore"
   year : '2019'
 - name : Sapre Dushyant Prashant
   degree : Bachelor of Science (Research) & Master of Science
   year : '2019'
 - name : Tapesh Yadav
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at University of Florida"
   year : '2019'
 - name : Anand U R
   degree : Bachelor of Science (Research)
@@ -262,9 +265,11 @@
   year : '2020'
 - name : Julian Reuben Dcosta
   degree : Bachelor of Science (Research)
+  present: "Graduate student at Oxford University"
   year : '2020'
 - name : Manan Bhatia
   degree : Bachelor of Science (Research)
+  present: "ICTS Bangalore"
   year : '2020'
 - name : Agneedh Basu
   degree : Bachelor of Science (Research) & Master of Science
